base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: demo-dry-flo
  labels:
    app: demo-dry-flo
    app.kubernetes.io/component: backstage
    backstage.io/kubernetes-id: demo-dry-flo
spec:
  ports:
    - name: http-8080
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: demo-dry-flo
